Refactor music handling and update dependencies
- Removed unused dependencies: `device_info_plus` and `flutter_media_metadata`.
- Updated `pubspec.yaml` and `pubspec.lock` to reflect changes.
- Enhanced `HomeController` to load music data from a service and manage artists and albums.
- Improved `HomeScreen` to display songs, artists, and albums with dynamic loading and refreshing.
- Added permission handling in `SplashScreen` to check and request necessary permissions before loading music.
- Updated platform-specific files to remove references to deprecated plugins.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,10 +51,8 @@ dependencies:
   # Icons
   flutter_svg: ^2.0.9
   shared_preferences: ^2.5.3
-  device_info_plus: ^12.1.0
-
-  # Audio query alternative (on_audio_query namespace muammosi bor)
-  flutter_media_metadata: ^1.0.0+1
+  # flutter_media_metadata: ^1.0.0+1 # Qo'shing
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
