--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # State management and routing
-  get: ^4.6.6
+  # get: ^4.6.6  # GetX dan voz kechamiz
+  provider: ^6.1.1 # Provider ishlatamiz
 
   # Audio player
   just_audio: ^0.9.36
