--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   shared_preferences: ^2.5.3
   # flutter_media_metadata: ^1.0.0+1 # Qo'shing
   path: ^1.9.0
+  iconsax_flutter: ^1.0.1
 
 dev_dependencies:
   flutter_test:
